2008-03-24  Alexandre Julliard  <julliard@winehq.org>

	* vc-git.el (vc-git-after-dir-status-stage1): Move state matching
	code ...
	(vc-git--state-code): ... to this new function.
	(vc-git-state): Use it.

2008-03-24  Trent Buck  <trentbuck@gmail.com>  (tiny change)

	* textmodes/remember.el (remember-mail-date)
	(remember-store-in-mailbox): Write date and From line in such a
	way that Mutt can read it.

2008-03-23  Chong Yidong  <cyd@stupidchicken.com>

	* simple.el (transient-mark-mode): Turn on by default.

2008-03-23  Xavier Maillard  <xma@gnu.org>

	* saveplace.el: fix a typo in the commentary section.

2008-03-23  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-bzr.el (vc-bzr-state): Return 'removed for removed files and
	'unregistered for unregistered files.

	* vc-hg.el (vc-hg-state): Return 'removed for removed files.

	* bindings.el (standard-mode-line-modes): Avoid duplicating a string.

	* vc-cvs.el (vc-cvs-parse-status): Note there are problems with
	subdirectories.

	* vc.el (vc-status-prepare-status-buffer): Fix thinko.
	(vc-status-menu-map): Add binding for
	vc-status-kill-dir-status-process.  Add :enable for vc-status-refresh.
	(vc-status-menu-map-filter): Remove vc-ignore-menu-filter test.
	(vc-status-tool-bar-map): Add binding for vc-status-kill-dir-status-process.
	Don't test display-graphic-p and don't bind vc-ignore-menu-filter.
	(vc-update-vc-status-buffer, vc-status-kill-dir-status-process):
	Reset vc-status-process-buffer.
	(vc-status-refresh): Don't run two refreshes at a time.
	(vc-status): If the buffer is already in vc-status-mode only refresh.
	(vc-status-mark-buffer-changed): Add an optional file parameter.
	(vc-resynch-buffer): Use it.
	(vc-delete-file): Expand the file name before using it.  Be
	careful to not create a new buffer with the old file contents.
	Update the VC state after performing the operation.

2008-03-23  Andreas Schwab  <schwab@suse.de>

	* menu-bar.el (menu-bar-showhide-fringe-ind-menu) [mixed]: Fix